# Drone-Observation

./: README.md  settings.json
devel/: .catkin  setup.fish
devel/lib/pkgconfig/: drone.pc
devel/share/drone/cmake/: droneConfig.cmake
src/drone/: CMakeLists.txt  package.xml
src/drone/launch/: multi.launch
src/drone/scripts/: node_analyze.py  node_manager.py  node_server.py  node_yolo.py
src/drone/src/: template.html
