<package format="2">
  <name>drone</name>
  <version>1.0.0</version>
  <description>Drone Mission Package</description>

  <maintainer email="befinetuning@gmail.com">main</maintainer>
  <license>BSD</license>

  <!-- Buildtool -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <!-- ROS Topics / Messages -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>

  <!-- cv_bridge -->
  <exec_depend>cv_bridge</exec_depend>

  <!-- For services -->
  <exec_depend>std_srvs</exec_depend>

</package>
